--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>udef</artifactId>
     <version>1.2-SNAPSHOT</version>
     <name>udef</name>
-    <url>https://mwwiki.eu.org</url>
+    <url>https://mwbbs.eu.org</url>
     <description>UDEF Class</description>
 
     <properties>
@@ -23,12 +23,13 @@
         <postgresql.version>42.5.6</postgresql.version>
         <h2database.version>2.1.212</h2database.version>
         <gson.version>2.8.9</gson.version>
+        <fastjson.version>1.2.28</fastjson.version>
         <kafka-clients.version>2.0.0</kafka-clients.version>
         <kafka-2.11.version>0.10.0.1</kafka-2.11.version>
         <kafka-streams.version>1.0.0</kafka-streams.version>
+        <jakarta.mail.version>2.0.1</jakarta.mail.version>
     </properties>
 
-    <!-- 依赖声明 -->
     <dependencies>
         <!--log4j-->
         <dependency>
@@ -74,7 +75,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.28</version>
+            <version>${fastjson.version}</version>
         </dependency>
         <!--Kafka-->
         <dependency>
@@ -95,7 +96,7 @@
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>jakarta.mail</artifactId>
-            <version>2.0.1</version>
+            <version>${jakarta.mail.version}</version>
         </dependency>
     </dependencies>
 </project>
