--- a/pom.xml
+++ b/pom.xml
@@ -16,88 +16,76 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <!-- dependency version -->
-        <log4j.version>1.2.17</log4j.version>
-        <slf4j.version>2.0.9</slf4j.version>
-        <mysql.version>8.0.33</mysql.version>
-        <postgresql.version>42.5.6</postgresql.version>
-        <h2database.version>2.1.212</h2database.version>
-        <gson.version>2.8.9</gson.version>
-        <fastjson.version>1.2.28</fastjson.version>
-        <kafka-clients.version>2.0.0</kafka-clients.version>
-        <kafka-2.11.version>0.10.0.1</kafka-2.11.version>
-        <kafka-streams.version>1.0.0</kafka-streams.version>
-        <jakarta.mail.version>2.0.1</jakarta.mail.version>
     </properties>
 
     <dependencies>
-        <!--log4j-->
+        <!-- log4j -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>
+            <version>1.2.17</version>
         </dependency>
-        <!--slf4j-->
+        <!-- slf4j -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j.version}</version>
+            <version>2.0.9</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
+            <version>2.0.9</version>
         </dependency>
-        <!--mysql-->
+        <!-- DB: mysql -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
+            <version>8.0.33</version>
         </dependency>
-        <!--postgresql-->
+        <!-- DB: postgresql -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>${postgresql.version}</version>
+            <version>42.5.6</version>
         </dependency>
-        <!--h2-->
+        <!-- DB: h2 -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>${h2database.version}</version>
+            <version>2.1.212</version>
         </dependency>
-        <!--Json-->
+        <!-- Json -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
+            <version>2.8.9</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>${fastjson.version}</version>
+            <version>1.2.28</version>
         </dependency>
-        <!--Kafka-->
+        <!-- Kafka -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>${kafka-clients.version}</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka_2.11</artifactId>
-            <version>${kafka-2.11.version}</version>
+            <version>0.10.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-streams</artifactId>
-            <version>${kafka-streams.version}</version>
+            <version>1.0.0</version>
         </dependency>
         <!-- mail -->
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>jakarta.mail</artifactId>
-            <version>${jakarta.mail.version}</version>
+            <version>2.0.1</version>
         </dependency>
         <!-- yaml -->
         <dependency>
